--- a/testimonials.html
+++ b/testimonials.html
@@ -1,10 +1,62 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Testimonials - Green Gecko Carpentry</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Testimonials for Green Gecko Carpentry, based in Brighton">
+    <link rel="icon" href="img/small_gecko.svg" type="image/png">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/base.css">
+    <!-- Facebook Logo -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
 
-{% load static %}
+<header>
+    <div class="collapse" style="background-color: #196826;" id="navbarHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-md-7 py-4">
+                    <p class="text-white">
+                        Brighton based GreenGecko, led by Mick Tanner, boasts 15 years of carpentry and loft conversion
+                        expertise. Mick founded the company six years ago. He and his team are dedicated to eco-friendly
+                        practices, delivering high-quality, clean, and green home improvements with exceptional
+                        craftsmanship.
+                    </p>
+                </div>
+                <div class="col-sm-4 offset-md-1 py-4">
+                    <h4 class="text-white">Contact</h4>
+                    <ul class="list-unstyled">
+                        <li class="text-white">Email: greengeckocarpentry@outlook.com</li>
+                        <li class="text-white">Call: 07932 739150</li>
+                        <li class="text-white">Social Media:
+                            <a href="https://www.facebook.com/profile.php/?id=100076419304863"
+                               class="fa fa-facebook"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="navbar navbar-dark shadow-sm" style="background-color: #196826;">
+        <div class="container">
+            <a href="index.html" class="navbar-brand d-flex align-items-center">
+                <img src="img/small_gecko.svg" alt="small gecko" width="40" height="40"
+                     class="me-2">
+                <strong>Green Gecko Carpentry</strong>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+</header>
 
-{% block content %}
-    {% include "header.html" %}
-
+<main>
     <div class="container">
         <div class="row py-4">
             <div class="col-md-6">
@@ -72,17 +124,17 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{% static "website/case_study_master_bedroom.png" %}" class="d-block w-100" alt="...">
+                        <img src="img/case_study_master_bedroom.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{% static "website/case_study_master_to_bathroom.png" %}" class="d-block w-100"
+                        <img src="img/case_study_master_to_bathroom.png" class="d-block w-100"
                              alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{% static "website/case_study_closet.png" %}" class="d-block w-100" alt="...">
+                        <img src="img/case_study_closet.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="{% static "website/case_study_family.png" %}" class="d-block w-100" alt="...">
+                        <img src="img/case_study_family.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -98,6 +150,22 @@
             </div>
         </div>
     </div>
+</main>
 
-    {% include "footer.html" %}
-{% endblock %}
+<footer>
+    <div class="text-muted py-3">
+        <div class="container">
+            <p class="float-end mb-1">
+                <a href="#">Back to top</a>
+            </p>
+            <p class="mb-0">Website by <a href="https://github.com/banillie">Banillie</a></p>
+        </div>
+    </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+</body>
+</html>
