--- a/index.html
+++ b/index.html
@@ -6,106 +6,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="website for Green Gecko Carpentry, based in Brighton">
     <link rel="icon" href="img/small_gecko.svg" type="image/png">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="src/input.css">
     <!-- Facebook Logo -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
 <header>
-    <div class="collapse" style="background-color: #196826;" id="navbarHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <p class="text-white">
-                        Brighton based GreenGecko, led by Mick Tanner, boasts 15 years of carpentry and loft conversion
-                        expertise. Mick founded the company six years ago. He and his team are dedicated to eco-friendly
-                        practices, delivering high-quality, clean, and green home improvements with exceptional
-                        craftsmanship.
-                    </p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4 class="text-white">Contact</h4>
-                    <ul class="list-unstyled">
-                        <li class="text-white">Email: greengeckocarpentry@outlook.com</li>
-                        <li class="text-white">Call: 07932 739150</li>
-                        <li class="text-white">Social Media:
-                            <a href="https://www.facebook.com/profile.php/?id=100076419304863"
-                               class="fa fa-facebook"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="navbar navbar-dark shadow-sm" style="background-color: #196826;">
-        <div class="container">
-            <a href="index.html" class="navbar-brand d-flex align-items-center">
-                <img src="img/small_gecko.svg" alt="small gecko" width="40" height="40"
-                     class="me-2">
+    <div class="container">
+        <input type="checkbox" id="navbar-toggle">
+        <nav class="navbar">
+            <a href="index.html" class="navbar-brand">
+                <img src="img/small_gecko.svg" alt="small gecko" width="40" height="40">
                 <strong>Green Gecko Carpentry</strong>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <label for="navbar-toggle" class="navbar-toggler">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+            </label>
+            
+            <div class="navbar-collapse">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="text-white">
+                            Brighton based GreenGecko, led by Mick Tanner, boasts 15 years of carpentry and loft conversion
+                            expertise. Mick founded the company six years ago. He and his team are dedicated to eco-friendly
+                            practices, delivering high-quality, clean, and green home improvements with exceptional
+                            craftsmanship.
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="text-white">Contact</h4>
+                        <ul class="contact-list">
+                            <li class="text-white">Email: greengeckocarpentry@outlook.com</li>
+                            <li class="text-white">Call: 07932 739150</li>
+                            <li class="text-white">Social Media:
+                                <a href="https://www.facebook.com/profile.php/?id=100076419304863"
+                                   class="fa fa-facebook"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </div>
 </header>
 
 <main>
-    <div class="col-lg-6 col-md-8 mx-auto py-4">
-        <div>
-            <img class="img-fluid" src="img/greengecko.jpeg" alt="Responsive image">
-        </div>
+    <div class="hero-img-container">
+        <img class="img-fluid" src="img/greengecko.jpeg" alt="Green Gecko Carpentry">
     </div>
     
-    <div class="album py-5">
+    <div class="album">
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <a href="testimonials.html">
-                        <img class="card-img-top" src="img/case_study_family.png"
-                             alt="Card image cap"></a>
-                        <div class="card-body">
-                            <h5 class="card-title">Testimonials</h5>
-                            Hear what our clients think of our work. 
-                        </div>
+            <div class="card-grid">
+                <div class="card">
+                    <a href="testimonials.html">
+                        <img class="card-img-top" src="img/case_study_family.png" alt="Testimonials">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Testimonials</h5>
+                        <p>Hear what our clients think of our work.</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="img/dormer.jpeg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Loft Conversions</h5>
-                            Expertly crafted, seamlessly combining practicality and style for impressive and spacious
-                            living areas that stand out.
-                        </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/dormer.jpeg" alt="Loft Conversions">
+                    <div class="card-body">
+                        <h5 class="card-title">Loft Conversions</h5>
+                        <p>Expertly crafted, seamlessly combining practicality and style for impressive and spacious
+                        living areas that stand out.</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="img/carpentry.jpeg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Carpentry</h5>
-                            Precision-crafted bespoke carpentry tailored for your living space and design needs,
-                            blending functionality with style.
-                        </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/carpentry.jpeg" alt="Carpentry">
+                    <div class="card-body">
+                        <h5 class="card-title">Carpentry</h5>
+                        <p>Precision-crafted bespoke carpentry tailored for your living space and design needs,
+                        blending functionality with style.</p>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <img class="card-img-top" src="img/kitchen_finished.jpeg"
-                             alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Kitchens</h5>
-                            Amazing renovations for kitchen remodeling projects of every size and budget, expertly designed
-                            and implemented with precision.
-                        </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/kitchen_finished.jpeg" alt="Kitchens">
+                    <div class="card-body">
+                        <h5 class="card-title">Kitchens</h5>
+                        <p>Amazing renovations for kitchen remodeling projects of every size and budget, expertly designed
+                        and implemented with precision.</p>
                     </div>
                 </div>
             </div>
@@ -114,19 +98,13 @@
 </main>
 
 <footer>
-    <div class="text-muted py-3">
-        <div class="container">
-            <p class="float-end mb-1">
-                <a href="#">Back to top</a>
-            </p>
-            <p class="mb-0">Website by <a href="https://github.com/banillie">Banillie</a></p>
-        </div>
+    <div class="container">
+        <p class="float-end">
+            <a href="#">Back to top</a>
+        </p>
+        <p>Website by <a href="https://github.com/banillie">Banillie</a></p>
     </div>
 </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
 
 </body>
 </html>
