--- a/testimonials.html
+++ b/testimonials.html
@@ -16,31 +16,29 @@
         <input type="checkbox" id="navbar-toggle">
         <nav class="navbar">
             <a href="index.html" class="navbar-brand">
-                <img src="img/small_gecko.svg" alt="small gecko" width="40" height="40">
+                <img src="img/small_gecko.svg" alt="Green Gecko Logo" width="45" height="45">
                 <strong>Green Gecko Carpentry</strong>
             </a>
             <label for="navbar-toggle" class="navbar-toggler">
-                <span class="navbar-toggler-icon"></span>
+                <span></span>
+                <span></span>
+                <span></span>
             </label>
             
             <div class="navbar-collapse">
-                <div class="row">
-                    <div class="col-md-6">
+                <div class="navbar-content">
+                    <div class="bio-section">
                         <p class="text-white">
                             Brighton based GreenGecko, led by Mick Tanner, boasts 15 years of carpentry and loft conversion
-                            expertise. Mick founded the company six years ago. He and his team are dedicated to eco-friendly
-                            practices, delivering high-quality, clean, and green home improvements with exceptional
-                            craftsmanship.
+                            expertise. Dedicated to eco-friendly practices and exceptional craftsmanship.
                         </p>
                     </div>
-                    <div class="col-md-6">
-                        <h4 class="text-white">Contact</h4>
+                    <div class="contact-section">
                         <ul class="contact-list">
-                            <li class="text-white">Email: greengeckocarpentry@outlook.com</li>
-                            <li class="text-white">Call: 07932 739150</li>
-                            <li class="text-white">Social Media:
-                                <a href="https://www.facebook.com/profile.php/?id=100076419304863"
-                                   class="fa fa-facebook"></a>
+                            <li><i class="fa fa-envelope-o"></i> <a href="mailto:greengeckocarpentry@outlook.com">Email Us</a></li>
+                            <li><i class="fa fa-phone"></i> <span>07932 739150</span></li>
+                            <li>
+                                <a href="https://www.facebook.com/profile.php/?id=100076419304863" class="fa fa-facebook"></a>
                             </li>
                         </ul>
                     </div>
@@ -139,10 +137,46 @@
 
 <footer>
     <div class="container">
-        <p class="float-end">
-            <a href="#">Back to top</a>
-        </p>
-        <p>Website by <a href="https://github.com/banillie">Banillie</a></p>
+        <div class="footer-grid">
+            <div class="footer-section">
+                <h5>Green Gecko Carpentry</h5>
+                <p>
+                    Specializing in bespoke carpentry and high-quality loft conversions in Brighton and surrounding areas. 
+                    We are dedicated to eco-friendly practices and exceptional craftsmanship.
+                </p>
+                <div class="footer-social">
+                    <a href="https://www.facebook.com/profile.php/?id=100076419304863" class="fa fa-facebook"></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h5>Quick Links</h5>
+                <ul class="footer-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="#">Back to top</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h5>Contact Us</h5>
+                <ul class="footer-contact">
+                    <li>
+                        <i class="fa fa-envelope-o"></i>
+                        <a href="mailto:greengeckocarpentry@outlook.com" style="color: inherit; text-decoration: none;">greengeckocarpentry@outlook.com</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-phone"></i>
+                        <span>07932 739150</span>
+                    </li>
+                    <li>
+                        <i class="fa fa-map-marker"></i>
+                        <span>Brighton, United Kingdom</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2026 Green Gecko Carpentry. All rights reserved. | Website by <a href="https://github.com/banillie">Banillie</a></p>
+        </div>
     </div>
 </footer>
 
