Add glassmorphism effects: enhance header, navigation, and hero section styling

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 <i class="fa fa-quote-left"></i>
                 <p>Super-reliable, stress-free - and tuneful!</p>
                 <cite>— Alex and Anik McCarthy</cite>
+                <i class="fa fa-quote-right"></i>
             </div>
         </div>
 
