--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
                         <div class="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item">
-                                    <img src="img/case_study_master_bedroom.png" alt="Master Bedroom">
+                                    <img src="img/case_study_master_bedroom.jpeg" alt="Master Bedroom">
                                     <div class="carousel-caption">Master Bedroom</div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/case_study_master_to_bathroom.png" alt="Master to Bathroom">
+                                    <img src="img/case_study_master_to_bathroom.jpeg" alt="Master to Bathroom">
                                     <div class="carousel-caption">Master to Bathroom</div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/case_study_closet.png" alt="Closet">
+                                    <img src="img/case_study_closet.jpeg" alt="Closet">
                                     <div class="carousel-caption">Walk-in Wardrobe</div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="img/case_study_family.png" alt="Family Room">
+                                    <img src="img/case_study_family.jpeg" alt="Family Room">
                                     <div class="carousel-caption">Family Space</div>
                                 </div>
                             </div>
